--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async-each": "^1.0.1",
     "body-parser": "~1.15.2",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
-    "express-ws": "^2.0.0",
     "express-fileupload": "0.0.5",
-    "express-ws-routes": "^1.1.0",
     "express-session": "^1.14.2",
+    "express-ws": "^2.0.0",
+    "express-ws-routes": "^1.1.0",
     "mongodb": "^2.2.12",
     "mongoose": "^4.7.1",
     "morgan": "~1.7.0",
